<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:background="#ff595c61"
        android:padding="5dp"
        android:layout_height="50.0dip" >
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5.0dip"
            android:textColor="@color/white"
            android:text="@string/back"
        />
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:singleLine="true" />
        <Button
            android:id="@+id/btn_more"
            android:background="@drawable/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5.0dip"
            android:textColor="@color/white"
            android:text="@string/more"
        />
    </RelativeLayout>

</RelativeLayout>