<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ebebeb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#22292c" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/top_bar_back" />

        <View
            android:id="@+id/view_temp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_back"
            android:background="#14191A" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/view_temp"
            android:text="@string/detail"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/icon_top_more" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/head"
            android:layout_gravity="center_vertical"
            android:id="@+id/iv_head" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:text="@string/default_name"
            android:textColor="#353535"
            android:id="@+id/tv_nick" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_sex_male"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:id="@+id/iv_sex" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <TextView
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:text="@string/location"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="#353535"
            android:paddingLeft="8dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_horizontal"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="#AAAAAA"
            android:text="@string/default_location" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_weight="0.06"
        android:background="#ffffff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:textColor="#353535"
            android:textSize="16sp"
            android:text="@string/signature" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#AAAAAA"
            android:layout_gravity="center_vertical"
            android:text="@string/default_signature" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="添加到通讯录"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:id="@+id/bt_add" />

</LinearLayout>
