<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:id="@+id/rl_new_friend">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/iv_new_friend"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_friends_new_friend"
            android:layout_marginLeft="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/new_friend"
            android:id="@+id/tv_new_friend"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_new_friend"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:clickable="true"
        android:background="@drawable/btn_list_item_bg"
        android:id="@+id/group_chat">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/imageView2"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_friends_group_chat"
            android:layout_marginLeft="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/group_chat"
            android:id="@+id/textView5"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/imageView2"
            android:textSize="16sp"
            android:textColor="#353535" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:clickable="true"
        android:background="@drawable/btn_list_item_bg"
        android:id="@+id/label">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/imageView3"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="false"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_friends_label"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label"
            android:id="@+id/textView7"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/imageView3"
            android:textSize="16sp"
            android:textColor="#353535"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#d9d9d9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/btn_list_item_bg"
        android:id="@+id/servicebrand"
        android:clickable="true">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/imageView4"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="false"
            android:src="@drawable/icon_friends_gongzhonghao"
            android:layout_marginLeft="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gongzhonghao"
            android:id="@+id/textView8"
            android:layout_alignParentBottom="false"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView4" />
    </RelativeLayout>
</LinearLayout>